toggle adv fehler behoben

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Chart.defaults.font.size   = 16;
 // Dropdown toggle
 const advToggle = document.getElementById('advToggle');
 const advBox = document.getElementById('advanced');
-avdToggle.onclick = () => {
+advToggle.onclick = () => {
   const open = advBox.style.display === 'block';
   advBox.style.display = open ? 'none' : 'block';
   advToggle.textContent = open ? 'Erweiterte Optionen ▼' : 'Erweiterte Optionen ▲';
