--- a/index.html
+++ b/index.html
@@ -20,115 +20,26 @@
       --border: #e0e0e0;
     }
     *, *::before, *::after { box-sizing: border-box; }
-    body {
-      margin: 0;
-      background-color: var(--bg);
-      color: var(--text);
-      font-family: 'Inter', sans-serif;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 760px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    h1 {
-      text-align: center;
-      font-size: 2.4rem;
-      margin-bottom: 1.5rem;
-    }
-    .card {
-      background-color: var(--card-bg);
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-      margin-bottom: 2rem;
-    }
-    label {
-      display: block;
-      margin: 0.75rem 0 0.25rem;
-      font-size: 1rem;
-      color: var(--text);
-    }
-    input[type="number"], select {
-      width: 100%;
-      padding: 0.6rem;
-      font-size: 1rem;
-      border: 1px solid var(--border);
-      border-radius: 8px;
-      transition: border-color 0.3s;
-    }
-    input[type="number"]:focus, select:focus {
-      border-color: var(--primary);
-      outline: none;
-    }
-    .row {
-      display: flex;
-      gap: 1rem;
-      margin-top: 0.5rem;
-    }
-    .btn {
-      display: block;
-      width: 100%;
-      padding: 0.75rem;
-      margin: 1rem 0;
-      font-size: 1rem;
-      font-weight: 600;
-      color: #fff;
-      background-color: var(--primary);
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .btn:hover {
-      background-color: var(--primary-hover);
-    }
-    #advToggle {
-      display: block;
-      margin: 1rem 0;
-      font-size: 0.95rem;
-      font-weight: 600;
-      color: var(--primary);
-      cursor: pointer;
-    }
-    #advanced {
-      display: none;
-      background-color: var(--bg);
-      border: 1px solid var(--border);
-      border-radius: 8px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-    }
-    #warn {
-      color: #c00;
-      font-size: 0.9rem;
-      min-height: 1.2em;
-      margin-top: 0.5rem;
-    }
-    h2, h3 {
-      text-align: center;
-      margin-top: 2rem;
-      font-size: 1.5rem;
-      color: var(--text);
-    }
-    canvas {
-      display: block;
-      width: 100% !important;
-      max-width: 760px;
-      height: 600px !important;
-      margin: 1.5rem auto;
-      background-color: var(--card-bg);
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.05);
-    }
+    body { margin:0; background-color:var(--bg); color:var(--text); font-family:'Inter',sans-serif; line-height:1.6; }
+    .container { max-width:760px; margin:2rem auto; padding:0 1rem; }
+    h1 { text-align:center; font-size:2.4rem; margin-bottom:1.5rem; }
+    .card { background:var(--card-bg); padding:2rem; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.1); margin-bottom:2rem; }
+    label { display:block; margin:0.75rem 0 0.25rem; font-size:1rem; color:var(--text); }
+    input[type="number"], select { width:100%; padding:0.6rem; font-size:1rem; border:1px solid var(--border); border-radius:8px; transition:border-color 0.3s; }
+    input:focus, select:focus { border-color:var(--primary); outline:none; }
+    .row { display:flex; gap:1rem; margin-top:0.5rem; }
+    .btn { display:block; width:100%; padding:0.75rem; margin:1rem 0; font-size:1rem; font-weight:600; color:#fff; background:var(--primary); border:none; border-radius:8px; cursor:pointer; transition:background 0.3s; }
+    .btn:hover { background:var(--primary-hover); }
+    #advToggle { display:block; margin:1rem 0; font-size:0.95rem; font-weight:600; color:var(--primary); cursor:pointer; }
+    #advanced { display:none; background:var(--bg); border:1px solid var(--border); border-radius:8px; padding:1rem; margin-bottom:1rem; }
+    #warn { color:#c00; font-size:0.9rem; min-height:1.2em; margin-top:0.5rem; }
+    h2,h3 { text-align:center; margin-top:2rem; font-size:1.5rem; }
+    canvas { display:block; width:100% !important; max-width:760px; height:600px !important; margin:1.5rem auto; background:var(--card-bg); border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.05); }
   </style>
 </head>
 <body>
-
 <div class="container">
   <h1>PersoShift ETF‑Rechner</h1>
-
   <div class="card">
     <label>Monatsrate (€)
       <input id="rate" type="number" value="50" min="0">
@@ -139,13 +50,11 @@
     <label>Jahresrendite (%) <span style="font-size:0.9rem;color:var(--muted);">(S&P 500 seit Marktstart ca. 10 % p.a.)</span>
       <input id="interest" type="number" value="10" step="0.1" min="0">
     </label>
-
     <div id="advToggle">Erweiterte Optionen ▼</div>
     <div id="advanced">
       <label>Startkapital (€)
         <input id="start" type="number" value="0" min="0">
       </label>
-
       <div class="row">
         <label style="flex:1">Einmalzahlung (€)
           <input id="lumpsum" type="number" value="0" min="0">
@@ -154,7 +63,6 @@
           <input id="lumpyear" type="number" value="1" min="1">
         </label>
       </div>
-
       <div class="row">
         <label style="flex:1">Auszahlung (€)
           <input id="payout" type="number" value="0" min="0">
@@ -163,7 +71,6 @@
           <input id="payoutYear" type="number" value="1" min="1">
         </label>
       </div>
-
       <div class="row">
         <div style="flex:1">
           <label>Auszahlplan: Ab Jahr
@@ -180,82 +87,31 @@
           </label>
         </div>
         <div style="flex:1">
-          <label style="opacity:0.6;">Auszahlintervall in Tage
-            <input id="payoutIntervalDays" type="number" placeholder="Auszahlintervall in Tage">
+          <label>Auszahlintervall in Tage
+            <input id="payoutIntervalDays" type="number" placeholder="Auszahlintervall in Tage" disabled>
           </label>
         </div>
       </div>
     </div>
-
     <button class="btn" onclick="calc(false)">Berechnen (Brutto)</button>
     <button class="btn" onclick="calc(true)">Berechnen (Netto [abzgl. 26,375 % in DE])</button>
     <div id="warn"></div>
   </div>
-
   <h2 id="headline"></h2>
   <canvas id="chart" width="800" height="600"></canvas>
-
   <h3>Vergleich (Endkapital)</h3>
   <canvas id="compare" width="800" height="600"></canvas>
 </div>
-
 <script>
-const taxRate = 0.26375;
-let chartMain, chartCompare;
-
-// Global Chart.js Defaults
-Chart.defaults.font.family = 'Inter, sans-serif';
-Chart.defaults.font.size   = 16;
-
-// Dropdown toggle
-const advToggle = document.getElementById('advToggle');
-const advBox = document.getElementById('advanced');
-advToggle.onclick = () => {
-  const open = advBox.style.display === 'block';
-  advBox.style.display = open ? 'none' : 'block';
-  advToggle.textContent = open ? 'Erweiterte Optionen ▼' : 'Erweiterte Optionen ▲';
-};
-
-// Formatierungsfunktion
-const fmt = n => n.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});
-
-// Element-Refs
-const rateEl = document.getElementById('rate');
-const yearsEl = document.getElementById('years');
-const intEl = document.getElementById('interest');
-const startEl = document.getElementById('start');
-const lumpEl = document.getElementById('lumpsum');
-const lumpYearEl = document.getElementById('lumpyear');
-const payoutEl = document.getElementById('payout');
-const payoutYearEl = document.getElementById('payoutYear');
-const payoutStartYrEl = document.getElementById('payoutStartYear');
-const payoutIntervalEl = document.getElementById('payoutInterval');
-const payoutIntervalDaysEl = document.getElementById('payoutIntervalDays');
-const warnEl = document.getElementById('warn');
-const headlineEl = document.getElementById('headline');
-
-function calc(withTax) {
-  warnEl.textContent = '';
-  const rate = parseFloat(rateEl.value) || 0;
-  const years = parseInt(yearsEl.value) || 0;
-  const annual = (parseFloat(intEl.value) || 0) / 100;
-  const start = parseFloat(startEl.value) || 0;
-  const lumpsum = parseFloat(lumpEl.value) || 0;
-  const lumpYear = parseInt(lumpYearEl.value) || 0;
-  const payout = parseFloat(payoutEl.value) || 0;
-  const payoutYear = parseInt(payoutYearEl.value) || 0;
-  const payoutStartYear = parseInt(payoutStartYrEl.value) || 0;
-  // Weitere Logik für Auszahlung etc. fehlt hier – nur Felder hinzugefügt
-
-  if (years < 1) { warnEl.textContent = 'Bitte Laufzeit ≥ 1 Jahr eingeben'; return; }
-  if (lumpsum > 0 && (lumpYear < 1 || lumpYear > years)) {
-    warnEl.textContent = 'Einmalzahlung außerhalb der Laufzeit';
-    return;
-  }
-
-  // Restliche Berechnung bleibt unverändert...
-}
+const taxRate=0.26375; let chartMain,chartCompare;
+Chart.defaults.font.family='Inter, sans-serif'; Chart.defaults.font.size=16;
+const advToggle=document.getElementById('advToggle'); const advBox=document.getElementById('advanced');
+advToggle.onclick=()=>{const open=advBox.style.display==='block';advBox.style.display=open?'none':'block';advToggle.textContent=open?'Erweiterte Optionen ▼':'Erweiterte Optionen ▲';};
+const fmt=n=>n.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});
+const rateEl=document.getElementById('rate'),yearsEl=document.getElementById('years'),intEl=document.getElementById('interest'),startEl=document.getElementById('start'),lumpEl=document.getElementById('lumpsum'),lumpYearEl=document.getElementById('lumpyear'),warnEl=document.getElementById('warn'),headlineEl=document.getElementById('headline');
+function calc(withTax){warnEl.textContent='';const rate=parseFloat(rateEl.value)||0;const years=parseInt(yearsEl.value)||0;const annual=(parseFloat(intEl.value)||0)/100;const start=parseFloat(startEl.value)||0;const lumpsum=parseFloat(lumpEl.value)||0;const lumpYear=parseInt(lumpYearEl.value)||0; if(years<1){warnEl.textContent='Bitte Laufzeit ≥ 1 Jahr eingeben';return;}if(lumpsum>0&&(lumpYear<1||lumpYear>years)){warnEl.textContent='Einmalzahlung außerhalb der Laufzeit';return;} const monthlyRate=annual/12; let balance=start; let paidTotal=start; const labels=[],depCum=[],gainCum=[],taxCum=[]; let grossPrev=0,taxTotal=0; for(let y=1;y<=years;y++){ if(lumpsum>0&&y===lumpYear){balance+=lumpsum;paidTotal+=lumpsum;} for(let m=1;m<=12;m++){balance*=(1+monthlyRate);balance+=rate;paidTotal+=rate;} const gross=balance-paidTotal; const yearTax=withTax?Math.max(0,(gross-grossPrev)*taxRate):0;taxTotal+=yearTax; const net=gross-taxTotal; grossPrev=gross; labels.push('Jahr '+y); depCum.push(paidTotal); gainCum.push(net); taxCum.push(taxTotal);} const finalGross=balance-paidTotal; const finalTax=withTax?finalGross*taxRate:0; const finalNet=finalGross-finalTax; const endDisplay=withTax?paidTotal+finalNet:balance; headlineEl.textContent=`Endkapital: ${fmt(endDisplay)}   Einzahlungen: ${fmt(paidTotal)}   Gewinn${withTax?' (Netto)':''}: ${fmt(withTax?finalNet:finalGross)}`;
+  if(chartMain)chartMain.destroy();chartMain=new Chart(document.getElementById('chart').getContext('2d'),{type:'bar',data:{labels,datasets:[{label:'Einzahlung kumuliert',data:depCum,backgroundColor:'rgba(101,115,255,0.7)',stack:'s',maxBarThickness:50},{label:`Gewinn kumuliert${withTax?' (Netto)':''}`,data:gainCum,backgroundColor:'rgba(46,204,113,0.7)',stack:'s',maxBarThickness:50},...(withTax?[{label:'Steuer kumuliert',data:taxCum,backgroundColor:'rgba(231,76,60,0.7)',stack:'s',maxBarThickness:50}]:[])]},options:{responsive:false,maintainAspectRatio:false,plugins:{legend:{position:'bottom'}},scales:{y:{beginAtZero:true},x:{}}}});
+  if(chartCompare)chartCompare.destroy();const bank0=paidTotal;let tdTotal=start,tdPaid=start;for(let y=1;y<=years;y++){tdTotal*=(1+0.02);tdTotal+=rate*12;tdPaid+=rate*12;}const compareData=[withTax?paidTotal+finalNet:balance,tdTotal,bank0],compareLabels=['ETF', 'Tagesgeld 2%', 'Bank 0%'];chartCompare=new Chart(document.getElementById('compare').getContext('2d'),{type:'bar',data:{labels:compareLabels,datasets:[{data:compareData,backgroundColor:['rgba(46,204,113,0.7)','rgba(52,152,219,0.7)','rgba(149,165,166,0.7)'],maxBarThickness:50}]},options:{responsive:false,maintainAspectRatio:false,plugins:{legend:{display:false}},scales:{y:{beginAtZero:true},x:{}}}});} 
 </script>
-
 </body>
 </html>
